  - Enhancement  #1102 Sort the moviedb.org poster images by age (oldest first)
  - Fixed defect #1105 Black bar at the top of images if aspect ratio is wrong
  - Fixed defect #1106 Fanart doesn't exist/download
  - Fixed defect #1107 Error Message when Scraping TV Series in TheTVDB API
  - Enhancement  #1108 Release date parsing for IMDB broken
  - Fixed defect #1117 Local videoimages copy error
  - Enhancement  #1119:	Include movie counter in cmd window
  - Enhancement  #1121 File size scanning/support for skin details
  - Enhancement  #1122 YAMJ Version Stamp in XML files.
  - Enhancement  #1124 Hebrew skin - playing BluRay backups with menu in C200

MovieJukebox 1.6
----------------
  - Enhancement   #777 Override file for moviejukebox.properties 
  - Fixed defect  #881 Custom image always picking season 1 for the "BOX set" image for escaped series names.
  - Enhancement   #955 Option to download SERIES banners instead of SEASON
  - Enhancement   #970 Updated/improved threading functionality to increase stability & throttle downloads on a per site basis
  - Enhancement  #1005 Download different banners for different seasons
  - Enhancement  #1010 Enable the use of Set banners for BoxedSets
  - Enhancement  #1017 Output YAMJ revision number for Beta builds
  - Fixed defect #1043 Multiple bugs with SratimPlugin
  - Fixed defect #1045 Banners not downloaded if Local Poster file exists
  - Enhancement  #1037 Added Norwegian language to filename scanner
  - Fixed defect #1046 With "play full BluRay disks" selected, audio and video details are UNKNOWN
  - Enhancement  #1048 Ignore special movie versions from filename: "Directors Cut", "Extended Cut" etc.
  - Enhancement  #1052 Append date & time to error log filename
  - Enhancement  #1040 New NMT file path for PCH C-200
  - Fixed defect #1053 Allocine search engine and layout has changed, plugin broken.
  - Enhancement  #1055 Output all errors to log file as well as console