@@ -17,10 +17,12 @@ MovieJukebox 1.7 BETA
   - Fixed defect #1107 Error Message when Scraping TV Series in TheTVDB API
   - Enhancement  #1108 Release date parsing for IMDB broken
   - Fixed defect #1117 Local videoimages copy error
-  - Enhancement  #1119:	Include movie counter in cmd window
+  - Enhancement  #1119 Include movie counter in cmd window
   - Enhancement  #1121 File size scanning/support for skin details
   - Enhancement  #1122 YAMJ Version Stamp in XML files.
   - Enhancement  #1124 Hebrew skin - playing BluRay backups with menu in C200
+  - Enhancement        Default skin: Highlighting of current category
+  - Enhancement        Default skin: "T9"-navigation over title first letters  
 
 MovieJukebox 1.6
 ----------------
